<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataParcelableActivity"
    android:padding="24dp"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_data"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#19A7CE"
        />
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_below="@+id/tvTitle"
        style="@style/textViewStyle"
        />
    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/tvNama"
        style="@style/textViewStyle"
        />
    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@+id/tvEmail"
        style="@style/textViewStyle"
        />
    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@+id/tvPhone"
        style="@style/textViewStyle"
        />
    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_below="@+id/tvAddress"
        style="@style/textViewStyle"
        />
    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/btnBack"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:textSize="20sp"
        app:backgroundTint="#3E54AC"
        android:layout_alignParentBottom="true" />
</RelativeLayout>